Add day and score counters, enhance loading screen styles, and refactor layout for improved user experience

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="1400" height="850"></canvas>
-
+    <div class="canvas-container">
+        <canvas id="gameCanvas" width="1400" height="850"></canvas>
+    </div>
     <script src="gameplay.js" defer></script>
 </body>
 </html>
